--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<h1 class="logo"><span class="logo__highlights">Hello,</span> Walter Mark!!</h1>
+<h1 class="logo"><span class="logo__highlights">Hello,</span> Walter Mark!!!</h1>
